Revert "catering update"
This reverts commit f0c22920336281d6ee85513f2eb054e5d6dc0b76.

--- a/organizing/MAAG2025.md
+++ b/organizing/MAAG2025.md
@@ -22,7 +22,12 @@ For funding, please apply by March 12th.
 </div>
 
 ## Talks
-All talks will take place in room 161 at the [ACLC](https://www.auburn.edu/academic/provost/active-learning/academic-classroom.php). There are seven 50-minute talks by:
+All talks will take place in room 161 at the [ACLC](https://www.auburn.edu/academic/provost/active-learning/academic-classroom.php). There are eight 50-minute talks by:
+- [Thomas Kahle](https://thomas-kahle.de) (OvGU Magdeburg)
+    <details>
+        <summary> Title: The likelihood correspondence </summary>
+        Abstract: We study SNC arrangements of hypersurfaces and the critical locus of Laurent monomials in the equations of the smooth hypersurfaces.  This locus is an irreducible variety in the product of two projective spaces, known in algebraic statistics as the likelihood correspondence and in particle physics as the scattering correspondence.  We establish an explicit determinantal representation for the bihomogeneous prime ideal of this variety. SNC arrangements are characterized by the non-vanishing of the Euler discriminant. This is joint work with Hal Schenck, Bernd Sturmfels, and Maximilian Wiesmann.
+    </details>
 
 - [Felice Manganiello](http://www.math.clemson.edu/~manganm/?section=1) (Clemson University)
     <details>
@@ -76,18 +81,16 @@ All talks will take place in room 161 at the [ACLC](https://www.auburn.edu/acade
 | Time             | Saturday                | Sunday                  |
 | :--------------: | :---------------------- | :---------------------- |
 | 8:30 -- 9:00     | *Registration + Coffee* | *Registration + Coffee* |
-| 9:00 -- 9:50     | Greg Blekherman         |  Michael Byrd           |
-| 9:55 -- 10:45    |  Parker Edwards         |  Irina Kogan            |
+| 9:00 -- 9:50     | Thomas Kahle            |  Irina Kogan            |
+| 9:55 -- 10:45    |  Parker Edwards         |  Michael Byrd           |
 | 10:45 -- 11:00   | *Short Break*           | *Short Break*           |
-| 11:00 -- 11:50   | Felice Manganiello      |                         |
-| 11:50 -- 1:50    | *Catered Lunch*                 |                         |
+| 11:00 -- 11:50   | Felice Manganiello      |  Greg Blekherman        |
+| 11:50 -- 1:50    | *Lunch*                 |                         |
 | 1:50 -- 2:40     | Dustin Cartwright       |                         |
 | 2:45 -- 3:35     | Julia Lindberg          |                         |
 | 3:35 -- 4:05     | *Coffee break*          |                         |
 | 4:05 -- 5:00     | Turbo talks             |                         |
-| Evening          | Ariccia Reception       |                         |
-
-On Saturday evening we will have a conference reception held at Ariccia, which is inside the hotel many participants will be staying at from 5:45-7:45 PM. 
+| Evening          | Conference Outing       |                         |
 
 ## Participant Information
 Lodging: We will be housing all participants at the [The Hotel at Auburn University](https://www.auhcc.com). If you are driving, there is parking at the hotel for the price of $ \$ $25/night for valet parking or 20/night for self parking, which we can reimburse. There is also free parking on College Street on the weekends. 
