--- a/organizing/MAAG2025.md
+++ b/organizing/MAAG2025.md
@@ -92,6 +92,8 @@ All talks will take place in room 161 at the [ACLC](https://www.auburn.edu/acade
 | 4:05 -- 5:00     | Turbo talks             |                         |
 | Evening          | Conference Outing       |                         |
 
+On Saturday evening we will have a conference reception held at Ariccia, which is inside the hotel many participants will be staying at from 5:45-7:45 PM. 
+
 ## Participant Information
 Lodging: We will be housing all participants at the [The Hotel at Auburn University](https://www.auhcc.com). If you are driving, there is parking at the hotel for the price of $ \$ $25/night for valet parking or 20/night for self parking, which we can reimburse. There is also free parking on College Street on the weekends. 
 
