updates on local information

--- a/organizing/MAAG2025.md
+++ b/organizing/MAAG2025.md
@@ -95,9 +95,16 @@ All talks will take place in room 161 at the [ACLC](https://www.auburn.edu/acade
 On Saturday evening we will have a conference reception held at Ariccia, which is inside the hotel many participants will be staying at from 5:45-7:45 PM. 
 
 ## Participant Information
-Lodging: We will be housing all participants at the [The Hotel at Auburn University](https://www.auhcc.com). If you are driving, there is parking at the hotel for the price of $ \$ $25/night for valet parking or 20/night for self parking, which we can reimburse. There is also free parking on College Street on the weekends. 
+Lodging: We will be housing all participants at the [The Hotel at Auburn University](https://www.auhcc.com). If you are driving, there is parking at the hotel for the price of 25/night for valet parking or 20/night for self parking, which we can reimburse. There is also free parking on College Street on the weekends. 
 
 Airport: We recommend flying to ATL and then taking the [Groome Shuttle](https://groometransportation.com/?&sd_client_id=b9e0e5cc-7c56-4a88-bf69-84da218a0388).
+
+## Local Information
+On Saturday, we will be catering lunch from Taco Mama and on Saturday evening we will have a reception at Ariccia from 5:45-7:45 PM. It is easter weekend, so many of the restaurants and bars may be busy but here are some recommendations nearby the hotel:
+
+- The Plains Taproom is a self-pour taproom nearby
+- The Hound does elevated southern food, although pricier
+- Hey Day Market is an upscale food court with many options
 
 ## Policies
 
