Add canvas page

--- a/classes/2630Fall2025/2630Fall2025.md
+++ b/classes/2630Fall2025/2630Fall2025.md
@@ -12,7 +12,7 @@ class: class
 
 ## Essential Information
 
-The central location for all course-related information (schedule, homework, syllabus, etc) is [Canvas](). All solutions to quizzes, tests, and worksheets will be posted to Canvas. There will be three in-semester exams, which will be held on September 18th, October 16th, and November 13th. The final exam will be on Friday, December 12th from 10:30-12:30. There will be 3 quizzes during recitation, one on September 4th, October 2nd, and October 28th. 
+The central location for all course-related information (schedule, homework, syllabus, etc) is [Canvas](https://auburn.instructure.com/courses/1669897). All solutions to quizzes, tests, and worksheets will be posted to Canvas. There will be three in-semester exams, which will be held on September 18th, October 16th, and November 13th. The final exam will be on Friday, December 12th from 10:30-12:30. There will be 3 quizzes during recitation, one on September 4th, October 2nd, and October 28th. 
 
 When you have a question, of course feel free to [email me](mailto:{{ site.email }}) but also please consider posting it to [Piazza](https://piazza.com/class/mc2dwdow4q62sa) (which you can do anonymously!) so that everyone can benefit from the discussion. It is incredibly likely that someone else is struggling with a similar issue. 
 
@@ -42,12 +42,34 @@ We will be covering Chapters 12-16 of James Stewart's *Calculus: Early Transcend
 | **October 9-10**                            | Fall break - No classes                                  |
 | **Thursday, October 16th**                  | Test 2                                                   |
 | **Tuesday, October 28th**                   | Quiz 3                                                   |
-| **Thursday, November 13th**                 | Test 3                                                   |
+| **Thursday, November 20th**                 | Test 3                                                   |
 | **Friday, November 21st**                   | Last day to withdraw with a grade of 'W'                 |
 | **November 24-28**                          | Thanksgiving break - No classes                          |
 | **Friday, December 5th**                    | Last day of classes                                      |
 | **Friday, December 12th, 10:30-12:30**      | Final Exam                                               |
 | **Monday, December 15th, 9:30 PM**          | Final grades are submitted                               |
+
+### Rough Class Schedule
+
+| **Date**                                    | **Topics**                                                |
+| :------------------------------------------ | :------------------------------------------------------- |
+| **Week 1**: August 18-22 | Sections 12.1-6 |
+| **Week 2**: August 25-29 | Sections 13.1-4 |
+| **Week 3**: September 1-5 | Sections 14.1-2 |
+| **Week 4**: September 8-12 | Sections 14.3-4  |
+| **Week 5**: September 15-19 | Sections 14.5, Test 1 review  |
+| **Week 6**: September 22-26 | Sections 14.6-7 |
+| **Week 7**: September 29-October 3 | Sections 14.8, 15.1-2 |
+| **Week 8**: October 6-10 | Sections 15.3,5 |
+| **Week 9**: October 13-17 | Sections 15.6, Test 2 review |
+| **Week 10**: October 20-24 | Sections 15.6-8 |
+| **Week 11**: October 27-31 | Sections 15.9, 16.1-2 |
+| **Week 12**: November 3-7 | Sections 16.3-4 |
+| **Week 13**: November 10-14 | Sections 16.5-6 |
+| **Week 14**: November 17-21 | Sections 16.7, Test 3 review |
+| **Week 15**: November 24-28 | 🦃 Thanksgiving Break! 🦃  |
+| **Week 16**: December 1-5 | Sections 16.8-9  |
+
 
 ## Class Policies
 
