grading scheme changed according to Hal

--- a/classes/2630Fall2025/2630Fall2025.md
+++ b/classes/2630Fall2025/2630Fall2025.md
@@ -89,9 +89,7 @@ There will be three in-class exams and their dates are listed above. These exams
 There will also be a final exam covering all material. 
 
 #### Grading Scheme
-Your course grade will be based on three in-class exams (20% each), the average of three quizzes and your worksheet scores (15% total), and a comprehensive final exam (25%). **However**, if your final exam score is better than your lowest test score then the exam will have weight 35%, and the low test score 5%. The lowest quiz score will be dropped and the lowest three worksheet scores will be dropped.
-
-Grade cutoffs will be never stricter than 90% for an A- grade, 80% for a B-, 70% for a C-, and 60% for a D-. Some exams may have grade cutoffs set more generously depending on their difficulty.
+Your course grade will be based on three in-class exams (20% each), the average of three quizzes and your worksheet scores (10% total), and a comprehensive final exam (30%). The lowest quiz score will be dropped and the lowest three worksheet scores will be dropped. Grade cutoffs will be never stricter than 90% for an A- grade, 80% for a B-, 70% for a C-, and 60% for a D-. Some exams may have grade cutoffs set more generously depending on their difficulty.
 
 ### Academic Honesty
 All portions of the [Auburn University student academic honesty code](https://sites.auburn.edu/admin/universitypolicies/Policies/AcademicHonestyCode.pdf) will apply to this class. All academic honesty violations or alleged violations of the SGA Code of Laws will be reported to the Office of the Provost, which will then refer the case to the Academic Honesty Committee. Tiger Cards will be checked for all exams.
