update date of final

--- a/classes/2630Fall2025/2630Fall2025.md
+++ b/classes/2630Fall2025/2630Fall2025.md
@@ -46,7 +46,7 @@ We will be covering Chapters 12-16 of James Stewart's *Calculus: Early Transcend
 | **Friday, November 21st**                   | Last day to withdraw with a grade of 'W'                 |
 | **November 24-28**                          | Thanksgiving break - No classes                          |
 | **Friday, December 5th**                    | Last day of classes                                      |
-| **Friday, December 12th, 10:30-12:30**      | Final Exam                                               |
+| **Thursday, December 11th, 4:00-6:30 PM**   | Final Exam                                               |
 | **Monday, December 15th, 9:30 PM**          | Final grades are submitted                               |
 
 ### Rough Class Schedule
